// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(161, 161, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="NameButton"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              null,
              Object {},
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "paddingRight": 6,
                },
              ]
            }
          >
            Branson Gutkowski
          </Text>
        </View>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {},
            ],
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {
                "paddingHorizontal": 2,
              },
            ],
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B2B0B2",
              "fontSize": 12,
            },
          ]
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly as mine 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(155, 161, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="NameButton"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              null,
              Object {},
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "paddingRight": 6,
                },
              ]
            }
          >
            Branson Gutkowski
          </Text>
        </View>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {},
            ],
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {
                "paddingHorizontal": 2,
              },
            ],
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B2B0B2",
              "fontSize": 12,
            },
          ]
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders editing correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(161, 161, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="NameButton"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              null,
              Object {},
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "paddingRight": 6,
                },
              ]
            }
          >
            Branson Gutkowski
          </Text>
        </View>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {},
            ],
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {
                "paddingHorizontal": 2,
              },
            ],
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B2B0B2",
              "fontSize": 12,
            },
          ]
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders my reported comment 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(155, 161, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "paddingRight": 6,
            },
          ]
        }
      >
        Branson Gutkowski
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {},
            ],
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {
                "paddingHorizontal": 2,
              },
            ],
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B2B0B2",
              "fontSize": 12,
            },
          ]
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders reported comment 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(161, 161, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "paddingRight": 6,
            },
          ]
        }
      >
        Branson Gutkowski
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {},
            ],
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {
                "paddingHorizontal": 2,
              },
            ],
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B2B0B2",
              "fontSize": 12,
            },
          ]
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders reported story 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(161, 161, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "paddingRight": 6,
            },
          ]
        }
      >
        Branson Gutkowski
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {},
            ],
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {
                "paddingHorizontal": 2,
              },
            ],
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B2B0B2",
              "fontSize": 12,
            },
          ]
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders without menu actions 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(161, 161, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="NameButton"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              null,
              Object {},
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "paddingRight": 6,
                },
              ]
            }
          >
            Branson Gutkowski
          </Text>
        </View>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {},
            ],
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B2B0B2",
                "fontSize": 12,
              },
              Object {
                "paddingHorizontal": 2,
              },
            ],
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B2B0B2",
              "fontSize": 12,
            },
          ]
        }
      >
        Edited
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "backgroundColor": "#ECEEF2",
            "borderRadius": 8,
            "marginVertical": 5,
            "paddingHorizontal": 13,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {},
          ]
        }
      >
        esse repellat quisquam
      </Text>
    </View>
  </View>
</View>
`;
